// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableGrid Destroy should work 1`] = `
<body>
  <div>
    <div
      class="SimpleTable_MainContainer_Style"
      style="height: 698px;"
    >
      <table
        class="SimpleTable_Table_Style"
      >
        <thead>
          <tr
            class="SimpleTable_TableRow_Style"
          >
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -125px;"
              />
            </th>
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -126px;"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="No_Record_Style"
              colspan="2"
            />
          </tr>
        </tbody>
      </table>
      <button
        class="LoadMoreButton_Hidden_Style LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`TableGrid GetOutputs should work 1`] = `
<body>
  <div>
    <div
      class="SimpleTable_MainContainer_Style"
      style="height: 698px;"
    >
      <table
        class="SimpleTable_Table_Style"
      >
        <thead>
          <tr
            class="SimpleTable_TableRow_Style"
          >
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -125px;"
              />
            </th>
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -126px;"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="No_Record_Style"
              colspan="2"
            />
          </tr>
        </tbody>
      </table>
      <button
        class="LoadMoreButton_Hidden_Style LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`TableGrid Init should work 1`] = `
<body>
  <div>
    <div
      class="SimpleTable_MainContainer_Style"
    >
      <table
        class="SimpleTable_Table_Style"
      />
      <button
        class="LoadMoreButton_Hidden_Style LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`TableGrid Load More Button 1`] = `
<body>
  <div>
    <div
      class="SimpleTable_MainContainer_Style"
      style="height: 698px;"
    >
      <table
        class="SimpleTable_Table_Style"
      >
        <thead>
          <tr
            class="SimpleTable_TableRow_Style"
          >
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -125px;"
              />
            </th>
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -126px;"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="No_Record_Style"
              colspan="2"
            />
          </tr>
        </tbody>
      </table>
      <button
        class="LoadMoreButton_Hidden_Style LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`TableGrid Row Click Event handler for the associated row when being clicked 1`] = `
<body>
  <div>
    <div
      class="SimpleTable_MainContainer_Style"
      style="height: 698px;"
    >
      <table
        class="SimpleTable_Table_Style"
      >
        <thead>
          <tr
            class="SimpleTable_TableRow_Style"
          >
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -84px;"
              />
            </th>
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -84px;"
              />
            </th>
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -83px;"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="SimpleTable_TableRow_Style"
            rowrecid="1"
          >
            <td
              class="SimpleTable_TableCell_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -84px;"
              />
            </td>
            <td
              class="SimpleTable_TableCell_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -84px;"
              />
            </td>
            <td
              class="SimpleTable_TableCell_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -83px;"
              />
            </td>
          </tr>
          <tr
            class="SimpleTable_TableRow_Style"
            rowrecid="2"
          >
            <td
              class="SimpleTable_TableCell_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -84px;"
              />
            </td>
            <td
              class="SimpleTable_TableCell_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -84px;"
              />
            </td>
            <td
              class="SimpleTable_TableCell_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -83px;"
              />
            </td>
          </tr>
          <tr
            class="SimpleTable_TableRow_Style"
            rowrecid="3"
          >
            <td
              class="SimpleTable_TableCell_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -84px;"
              />
            </td>
            <td
              class="SimpleTable_TableCell_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -84px;"
              />
            </td>
            <td
              class="SimpleTable_TableCell_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -83px;"
              />
            </td>
          </tr>
        </tbody>
      </table>
      <button
        class="LoadMoreButton_Hidden_Style LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`TableGrid Update View should Work 1`] = `
<body>
  <div>
    <div
      class="SimpleTable_MainContainer_Style"
      style="height: 698px;"
    >
      <table
        class="SimpleTable_Table_Style"
      >
        <thead>
          <tr
            class="SimpleTable_TableRow_Style"
          >
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -125px;"
              />
            </th>
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -126px;"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="No_Record_Style"
              colspan="2"
            />
          </tr>
        </tbody>
      </table>
      <button
        class="LoadMoreButton_Hidden_Style LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`TableGrid toggle load more button if it has next page 1`] = `
<body>
  <div>
    <div
      class="SimpleTable_MainContainer_Style"
      style="height: 698px;"
    >
      <table
        class="SimpleTable_Table_Style"
      >
        <thead>
          <tr
            class="SimpleTable_TableRow_Style"
          >
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -125px;"
              />
            </th>
            <th
              class="SimpleTable_TableHeader_Style"
            >
              <div
                class="SimpleTable_TableCellInnerDiv_Style"
                style="max-width: -126px;"
              />
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="No_Record_Style"
              colspan="2"
            />
          </tr>
        </tbody>
      </table>
      <button
        class="LoadMoreButton_Style"
        type="button"
      />
    </div>
  </div>
</body>
`;
